Use a native library to create FileDescriptors if reflection does not allow access (fixes #575)